    - Vietnamese (Nguyễn Vũ Hưng)
    - French (David Prévot)
    - Brazilian Portugese (Adriano Rafael Gomes) (Closes: #686717)
    - Japanese (Nobuhiro Iwamatsu) (Closes: #686720)
    - Spanish (Omar Campagne) (Closes: #686748)
  * debian/postinst: When checking which configuration files are present,
    treat ENOTDIR like ENOENT (Closes: #698203)
  * Run version_cmp() unit tests at build time

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 01 May 2012 01:54:46 +0100

linux-base (3.5) unstable; urgency=low

  * debian/control: Set Multi-Arch: foreign to allow for installation
    of foreign linux-image packages

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 04 Mar 2012 15:21:57 +0000

linux-base (3.4) unstable; urgency=low

  * perf: Fix lookup of the real command and package names for official
    packages of Linux 3.1 onward and for custom kernels with stable
    updates

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 14 Nov 2011 05:42:35 +0000

linux-base (3.3) unstable; urgency=low

  * debian/control: Fix VCS URLs (Closes: #620609)
  * Update debconf template translations:
    - Slovak (Slavko) (Closes: #622118)
    - Dutch (Jeroen Schot) (Closes: #629389)
  * linux-version: Fix interpolation of command name in help, thanks to
    Jakub Wilk (Closes: #624795)
  * debian/postinst: Fix warning produced when checking a device that
    does not exist or has no recognisable filesystem (Closes: #620608)

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 04 Jul 2011 05:12:18 +0100

linux-base (3.2) unstable; urgency=low

  * Add the linux-version command, providing:
    - compare and sort operations on Linux kernel version strings
    - list of installed versions (and optionally the image paths)

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 01 Apr 2011 04:07:32 +0100

linux-base (3.1) unstable; urgency=low

  * Consider a boot-loader package as installed if it is only unpacked
    (Closes: #618958)
